Add file upload in sighting comments (#19)
* now add votes

* adding in being able to attatch files in comments

* replies to comments now working

---------

Co-authored-by: OliverMclachlan <OliverM@linn.co.uk>